testdata/test/resources/com/yafred/asn1/test/should_fail/sequence_duplicate_component.asn
-- FAILS: duplicate component names
Module DEFINITIONS AUTOMATIC TAGS ::= BEGIN

My-Sequence ::= SEQUENCE {
un BOOLEAN,
deux BOOLEAN,
un BOOLEAN,
...,
[[ un BOOLEAN ]]
}




END